--- a/app/src/main/res/layout/activity_email.xml
+++ b/app/src/main/res/layout/activity_email.xml
@@ -22,7 +22,7 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/id_editxt_email"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -36,7 +36,7 @@
         app:layout_constraintTop_toBottomOf="@+id/appbar" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/id_editxt_password"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -44,18 +44,27 @@
         android:ems="10"
         android:hint="@string/str_email_edit_password"
         android:inputType="textPassword"
-        app:layout_constraintEnd_toEndOf="@+id/editText"
-        app:layout_constraintStart_toStartOf="@+id/editText"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
+        app:layout_constraintEnd_toEndOf="@+id/id_editxt_email"
+        app:layout_constraintStart_toStartOf="@+id/id_editxt_email"
+        app:layout_constraintTop_toBottomOf="@+id/id_editxt_email" />
+
+    <Button
+        android:id="@+id/id_btn_email_signup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="104dp"
+        android:layout_marginEnd="32dp"
+        android:text="@string/str_email_login_btn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/id_editxt_password" />
 
     <Button
         android:id="@+id/id_btn_email_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:text="@string/str_email_login_btn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText2" />
+        android:text="@string/str_btn_login"
+        app:layout_constraintEnd_toStartOf="@+id/id_btn_email_signup"
+        app:layout_constraintTop_toTopOf="@+id/id_btn_email_signup" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
