added layout for homeactivity and deal item

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="dimen_btn_icon_padd">4dp</dimen>
     <dimen name="dimen_btn_standard_margin">16dp</dimen>
+    <dimen name="dimen_cardview_margin">8dp</dimen>
 </resources>
