--- a/app/src/main/res/layout/deal_item.xml
+++ b/app/src/main/res/layout/deal_item.xml
@@ -44,6 +44,7 @@
             android:layout_height="wrap_content" />
 
         <TextView
+            android:id="@+id/id_deal_price"
             android:textStyle="bold"
             android:textColor="@color/colorAccent"
             android:text="1400"
