--- a/app/src/main/res/layout/activity_email.xml
+++ b/app/src/main/res/layout/activity_email.xml
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="108dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="@dimen/dimen_edittxt_margin"
         android:ems="10"
         android:hint="@string/str_edit_email"
         android:inputType="textEmailAddress"
@@ -39,7 +39,7 @@
         android:id="@+id/id_editxt_password"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="@dimen/dimen_edittxt_margin"
         android:drawableEnd="@drawable/ic_visibility"
         android:ems="10"
         android:hint="@string/str_email_edit_password"
