--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="dimen_btn_icon_padd">4dp</dimen>
     <dimen name="dimen_btn_standard_margin">16dp</dimen>
     <dimen name="dimen_cardview_margin">8dp</dimen>
+    <dimen name="dimen_edittxt_margin">8dp</dimen>
 </resources>
