--- a/app/src/main/res/layout/activity_email.xml
+++ b/app/src/main/res/layout/activity_email.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.EmailActivity">
+    tools:context=".activities.EmailSignInActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
