--- a/app/src/main/res/layout/deal_item.xml
+++ b/app/src/main/res/layout/deal_item.xml
@@ -19,19 +19,20 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:src="@drawable/ic_imageplacholder"
-            android:layout_width="80dp"
-            android:layout_height="80dp" />
+            android:layout_width="100dp"
+            android:layout_height="100dp" />
 
         <TextView
-            android:text="Paris with love"
-            android:textSize="23sp"
-            android:textColor="@android:color/black"
             android:id="@+id/id_deal_title"
-            app:layout_constraintStart_toEndOf="@+id/id_deal_image"
-            app:layout_constraintTop_toTopOf="@+id/id_deal_image"
-            app:layout_constraintEnd_toEndOf="parent"
             android:layout_width="0dp"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:text="Paris with love"
+            android:textColor="@android:color/black"
+            android:textSize="23sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/id_deal_image"
+            app:layout_constraintTop_toTopOf="@+id/id_deal_image" />
 
         <TextView
             android:text="Shomfo Resort"
@@ -45,14 +46,15 @@
 
         <TextView
             android:id="@+id/id_deal_price"
-            android:textStyle="bold"
-            android:textColor="@color/colorAccent"
-            android:text="1400"
-            android:textSize="16sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/id_deal_description"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:text="1400"
+            android:textColor="@color/colorAccent"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/id_deal_description" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
