--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="dimen_btn_standard_margin">16dp</dimen>
     <dimen name="dimen_cardview_margin">4dp</dimen>
     <dimen name="dimen_edittxt_margin">8dp</dimen>
+    <dimen name="dimen_fab_margin">16dp</dimen>
 </resources>
