--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark" >@color/colorPrimaryDark</item>
         <item name="colorAccent" >@color/colorAccent</item>
+        <item name="actionOverflowButtonStyle">@style/MyOverflowButtonStyle</item>
     </style>
 
     <style name="AppTheme.NoActionBar" parent="AppTheme">
@@ -22,7 +23,7 @@
     </style>
 
     <style name="AppBarTextTitle" parent="TextAppearance.AppCompat.Title">
-        <item name="android:textColor">@android:color/holo_blue_bright</item>
+        <item name="android:textColor">@color/iconColor</item>
     </style>
 
 </resources>
