--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -32,7 +32,7 @@
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/id_fab"
         android:src="@drawable/ic_upload"
-        android:layout_margin="@dimen/dimen_cardview_margin"
+        android:layout_margin="@dimen/dimen_fab_margin"
         android:layout_gravity="bottom|end"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
