--- a/app/src/main/res/layout/deal_item.xml
+++ b/app/src/main/res/layout/deal_item.xml
@@ -50,9 +50,8 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:text="1400"
-            android:textColor="@color/colorAccent"
             android:textSize="16sp"
-            android:textStyle="bold"
+            android:textColor="#3700B3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/id_deal_description" />
 
