--- a/app/src/main/res/values-v23/styles.xml
+++ b/app/src/main/res/values-v23/styles.xml
@@ -7,6 +7,7 @@
         <item name="colorPrimaryDark" >@android:color/white</item>
         <item name="colorAccent" >@color/colorAccent</item>
         <item name="android:windowLightStatusBar">true</item>
+        <item name="actionOverflowButtonStyle">@style/MyOverflowButtonStyle</item>
     </style>
 
     <style name="AppTheme.NoActionBar" parent="AppTheme">
@@ -24,6 +25,10 @@
 
     <style name="AppBarTextTitle" parent="TextAppearance.AppCompat.Title">
         <item name="android:textColor">@android:color/holo_blue_bright</item>
+    </style>
+
+    <style name="MyOverflowButtonStyle" parent="Widget.AppCompat.ActionButton.Overflow">
+        <item name="android:tint">@color/iconColor</item>
     </style>
 
 </resources>
