--- a/app/src/main/res/layout/activity_email.xml
+++ b/app/src/main/res/layout/activity_email.xml
@@ -21,34 +21,53 @@
         </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
 
-    <EditText
-        android:id="@+id/id_editxt_email"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/id_edit_email_layout"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="108dp"
-        android:layout_marginEnd="@dimen/dimen_edittxt_margin"
+        android:layout_marginEnd="16dp"
         android:ems="10"
-        android:hint="@string/str_edit_email"
-        android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/appbar" />
+        app:layout_constraintTop_toBottomOf="@+id/appbar">
 
-    <EditText
-        android:id="@+id/id_editxt_password"
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/id_edit_email"
+            android:hint="@string/str_edit_email"
+            android:inputType="textEmailAddress"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/id_edit_password_layout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_marginTop="@dimen/dimen_edittxt_margin"
-        android:drawableEnd="@drawable/ic_visibility"
-        android:ems="10"
         android:hint="@string/str_email_edit_password"
-        android:inputType="textPassword"
-        app:layout_constraintEnd_toEndOf="@+id/id_editxt_email"
-        app:layout_constraintStart_toStartOf="@+id/id_editxt_email"
-        app:layout_constraintTop_toBottomOf="@+id/id_editxt_email" />
+        app:layout_constraintEnd_toEndOf="@+id/id_edit_email_layout"
+        app:layout_constraintStart_toStartOf="@+id/id_edit_email_layout"
+        app:layout_constraintTop_toBottomOf="@+id/id_edit_email_layout">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/id_editxt_password"
+            android:ems="10"
+            android:drawableEnd="@drawable/ic_visibility"
+            android:inputType="textPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </com.google.android.material.textfield.TextInputLayout>
 
     <Button
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:textColor="@android:color/black"
+        android:textAllCaps="false"
         android:id="@+id/id_btn_email_signup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -56,9 +75,12 @@
         android:layout_marginEnd="32dp"
         android:text="@string/str_email_login_btn"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/id_editxt_password" />
+        app:layout_constraintTop_toBottomOf="@+id/id_edit_password_layout" />
 
     <Button
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:textColor="@android:color/black"
+        android:textAllCaps="false"
         android:id="@+id/id_btn_email_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
