--- a/app/src/main/res/layout/activity_email.xml
+++ b/app/src/main/res/layout/activity_email.xml
@@ -8,6 +8,7 @@
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
+        app:errorEnabled="true"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         app:layout_constraintTop_toTopOf="parent">
@@ -24,6 +25,7 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/id_edit_email_layout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        app:errorEnabled="true"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -36,6 +38,7 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/id_edit_email"
+            app:errorEnabled="true"
             android:hint="@string/str_edit_email"
             android:inputType="textEmailAddress"
             android:layout_width="match_parent"
@@ -47,6 +50,7 @@
         android:id="@+id/id_edit_password_layout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        app:errorEnabled="true"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_marginTop="@dimen/dimen_edittxt_margin"
         android:hint="@string/str_email_edit_password"
