--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -23,8 +23,9 @@
 
 
     <Button
+        style="@style/Widget.AppCompat.Button.Colored"
         android:id="@+id/id_btn_launch_emailact"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="208dp"
         android:drawableStart="@drawable/ic_email"
@@ -32,22 +33,18 @@
         android:text="@string/str_signin_btntxt"
         android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="@+id/id_btn_launch_googleact"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/id_btn_launch_googleact"
         app:layout_constraintTop_toBottomOf="@id/appbar" />
 
-    <Button
+    <com.google.android.gms.common.SignInButton
         android:id="@+id/id_btn_launch_googleact"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="@dimen/dimen_btn_standard_margin"
         android:layout_marginEnd="8dp"
-        android:background="@drawable/common_google_signin_btn_text_dark_normal"
-        android:drawablePadding="@dimen/dimen_btn_icon_padd"
-        android:text="@string/str_googlebtn"
-        android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/id_btn_launch_emailact" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
