--- a/app/src/main/res/layout/activity_google.xml
+++ b/app/src/main/res/layout/activity_google.xml
@@ -49,13 +49,13 @@
         android:layout_weight="1"
         android:background="@color/grey_300">
 
-        <com.google.android.gms.common.SignInButton
-            android:id="@+id/signInButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:visibility="visible"
-            tools:visibility="gone" />
+        <!--<com.google.android.gms.common.SignInButton-->
+            <!--android:id="@+id/signInButton"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_centerInParent="true"-->
+            <!--android:visibility="visible"-->
+            <!--tools:visibility="gone" />-->
 
         <LinearLayout
             android:id="@+id/signOutAndDisconnect"
