--- a/app/src/main/res/menu/deal_menu.xml
+++ b/app/src/main/res/menu/deal_menu.xml
@@ -8,7 +8,7 @@
         app:showAsAction="ifRoom" />
 
     <item
-        android:id="@+id/delete_menu"
+        android:id="@+id/action_delete_menu"
         android:title="@string/delete_deal"
         app:showAsAction="never" />
 </menu>
